// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionRollup should render default element 1`] = `
<div
  aria-haspopup={true}
  aria-label="Terra.applicationNavigation.extensions.rollupButtonDescription"
  className="extension-rollup"
  data-application-extension-rollup={true}
  data-focus-styles-enabled={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
  title="Terra.applicationNavigation.extensions.rollupButtonDescription"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconExtensions
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ExtensionRollup should render prop data 1`] = `
<div
  aria-haspopup={true}
  aria-label="Terra.applicationNavigation.extensions.rollupButtonDescription"
  className="extension-rollup"
  data-application-extension-rollup={true}
  data-focus-styles-enabled={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
  title="Terra.applicationNavigation.extensions.rollupButtonDescription"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconExtensions
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
    <ExtensionCount
      className="extension-rollup-count"
      isRollup={true}
      value={1}
    />
  </div>
</div>
`;

exports[`ExtensionRollup should render with ref 1`] = `
<div
  aria-haspopup={true}
  aria-label="Terra.applicationNavigation.extensions.rollupButtonDescription"
  className="extension-rollup"
  data-application-extension-rollup={true}
  data-focus-styles-enabled={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
  title="Terra.applicationNavigation.extensions.rollupButtonDescription"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconExtensions
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;

exports[`ExtensionRollup should render with selection callback 1`] = `
<div
  aria-haspopup={true}
  aria-label="Terra.applicationNavigation.extensions.rollupButtonDescription"
  className="extension-rollup"
  data-application-extension-rollup={true}
  data-focus-styles-enabled={true}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="button"
  tabIndex="0"
  title="Terra.applicationNavigation.extensions.rollupButtonDescription"
>
  <div
    className="extension-rollup-inner"
  >
    <div
      className="extension-rollup-image"
    >
      <IconExtensions
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
</div>
`;
